--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:scripts": "scripty",
     "build:hash": "scripty",
     "build":"scripty",
-    "prebuild": "rm -rf dist && mkdir -p dist/static/{images,styles,scripts}"
+    "prebuild": "rm -rf dist && mkdir -p dist/static/{images,css,scripts}"
   },
   "repository": {
     "type": "git",
